--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <section hidden id="user">
       <h2>Hello <span class="username"></span>!</h2>
     </section>
+    
+    <from id="post" hidden>
+      <input type="text"></input>
+      <input type="button" onClick="postUserFragments()" value="POST"></button>
+    </from>
+    
   </body>
 </html>
