implemented POST/GET requests UI

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Fragments UI</title>
     <link rel="stylesheet" href="https://unpkg.com/bamboo.css" />
+    <script type="module" src="src/api.js"></script>
     <script type="module" src="src/app.js"></script>
   </head>
   <body>
@@ -14,5 +15,17 @@
     <section hidden id="user">
       <h2>Hello <span class="username"></span>!</h2>
     </section>
+    <section hidden id="post">
+    <from>
+      <input type="text" id="data">
+      <button type="submit" id="postBtn"> POST </button>
+      <button type="submit" id="getBtn"> GET FRAGMENT </button>
+      <button type="submit" id="getListBtn"> GET FRAGMENT EXPAND </button>
+      <button type="submit" id="getByIdBtn"> GET DATA BY ID</button>
+    </from>
+    
+    </section>
   </body>
+  
+ 
 </html>
